[package]
name = "http_handler"
version = "0.0.0-dev"
authors = ["Daniel Worthington-Bodart <dan@bodar.com>"]
description = "Rust Implementation of HttpHandler"
documentation = "https://github.com/danielbodart/http-handler.rust/wiki"
homepage = "https://github.com/danielbodart/http-handler.rust"
repository = "https://github.com/danielbodart/http-handler.rust.git"
readme = "README.md"
license = "Apache-2.0"

[lib]
name = "http_handler"
path = "src/lib.rs"

[[bin]]
name = "http_handler"
path = "src/main.rs"

[dependencies]
nom = { version = "2.0.1", features = ["verbose-errors"] }
regex = "0.1.80"
lazy_static = "0.2.2"
reduce = "0.1.1"
