[package]
name = "http_handler"
version = "0.0.0-dev"
authors = ["Daniel Worthington-Bodart <dan@bodar.com>"]
description = "Rust Implementation of HttpHandler"
documentation = "https://github.com/danielbodart/http-handler.rust/wiki"
homepage = "https://github.com/danielbodart/http-handler.rust"
repository = "https://github.com/danielbodart/http-handler.rust.git"
readme = "README.md"
license = "Apache-2.0"
edition = "2018"

[lib]
name = "http_handler"
path = "src/lib.rs"

[[bin]]
name = "http_handler"
path = "src/main.rs"

[dependencies]
nom = "5.1.1"
regex = "1.3.4"
lazy_static = "1.4.0"
reduce = "0.1.2"
